see #209 compiled cli, woker and manuel

--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -1691,7 +1691,7 @@ GAB</code></pre>
 <li><p>Taktnummern stehen am Anfang der Note in Spielrichtung (also oben bei spiel von oben nach unten)</p></li>
 <li><p>Z&#228;hlmarken stehen am Ende der Noten in Spielrichtung (also unten bei Spiel von oben nach unten)</p></li>
 <li><p>die horziontale Position errechnet sich aus dem Verlauf der Flussinien. Man kann aber &#252;ber das Kontextmen&#252; f&#252;r jede Taktnummer / Z&#228;hlmarke einstellen, ob sie links oder rechts von der Note platziert wird.</p></li>
-<li><p>Man kann einstellen, ob die Taktnummern / Z&#228;hlmarken bezogen auf die <strong>Notenmitte oder den Notenrand</strong> positioniert werden (Kapitel &#160;<a href="#extract.0.barnumbers.apanchor"><code>extract.0.barnumbers.apbase</code></a> bzw. &#160;<a href="#extract.0.countnotes.appanchor"><code>extract.0.barnumbers.apbase</code></a> )</p></li>
+<li><p>Man kann einstellen, ob die Taktnummern / Z&#228;hlmarken bezogen auf die <strong>Notenmitte oder den Notenrand</strong> positioniert werden (Kapitel &#160;<a href="#extract.0.barnumbers.apanchor"><code>extract.0.barnumbers.apanchor</code></a> bzw. &#160;<a href="#extract.0.barnumbers.apbase"><code>extract.0.barnumbers.apbase</code></a> )</p></li>
 <li><p>Man kann einstellen, wie weit entfgernt Taktnummern / Z&#228;hlmarken bezogen auf die <strong>Notenmitte oder den Notenrand</strong> positioniert werden (Kapitel &#160;<a href="#extract.0.barnumbers.apbase"><code>extract.0.barnumbers.apbase</code></a> bzw. &#160;<a href="#extract.0.countnotes.apbase"><code>extract.0.barnumbers.apbase</code></a> )</p></li>
 </ol>
 <blockquote>
