--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -94,7 +94,8 @@
 <li><a href="#feste-leerzeichen-in-texten"><span class="toc-section-number">4.8.12</span> feste Leerzeichen in Texten</a></li>
 <li><a href="#extra-einstellungen-für-die-notenvorschau"><span class="toc-section-number">4.8.13</span> Extra Einstellungen für die Notenvorschau</a></li>
 <li><a href="#filetemplates"><span class="toc-section-number">4.8.14</span> Arbeiten mit Dateivorlagen (Templates)</a></li>
-<li><a href="#parameter-in-der-zupfnoter-url"><span class="toc-section-number">4.8.15</span> Parameter in der Zupfnoter-URL</a></li>
+<li><a href="#auflösen-von-akkorden"><span class="toc-section-number">4.8.15</span> Auflösen von Akkorden</a></li>
+<li><a href="#parameter-in-der-zupfnoter-url"><span class="toc-section-number">4.8.16</span> Parameter in der Zupfnoter-URL</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#zupfnoter-für-experten"><span class="toc-section-number">5</span> Zupfnoter für Experten</a><ul>
@@ -1830,7 +1831,19 @@ I:staffnonote 2</code></pre>
 <blockquote>
 <p><strong>Hinweis</strong>: Die Konfigurationsparameter <code>template.filebase</code> werden auch in die neuen Stücke kopiert, haben dort aber keine Wirkung mehr weil die <code>F:</code> - zeile nun keinen Platzhalter mehr enthält. Sie sind jedoch als Dokumentation hilfreich, welche Vorlage bei der Erstellung des Stückes verwendet wurde.</p>
 </blockquote>
-<h3 id="parameter-in-der-zupfnoter-url"><span class="header-section-number">4.8.15</span> Parameter in der Zupfnoter-URL</h3>
+<h3 id="auflösen-von-akkorden"><span class="header-section-number">4.8.15</span> Auflösen von Akkorden</h3>
+<p>Manchmal bekommt man XML-Dateien bei denen Mehrklänge nicht auf einzelne Stimmen aufgeteilt sind, ondern in Mehrklängen dargestellt werden. Für Tischharfen kann es vorteilhaft sein, diese Mehrklänge aufzulösen. Hierfür ist folgendes Vorgehen sinnvoll:</p>
+<ol type="1">
+<li><p>Die Stimme mit den Mehrklängen kopieren, neu Einfügen und eine neue Stimmnummer vergeben.</p></li>
+<li><p>Alle Noten der neuen Stimme selektieren</p></li>
+<li><p>Im Menü <code>Bearbeiten / Mehrklang zu erster Note</code> bzw. <code>Bearbeiten / Mehrklang zu letzter Note</code> aufrufen.</p></li>
+</ol>
+<p>Es kann auch sein, dass die Flusslinie bei Mehrklängen am “falschen Ende” anschließt. Bei Sopran sollte die Flußlinie an der höchsten Noten anschließen. Bei den Bass-Stimmen möchte man dagegen dass die Flußlinie and der tiefsten Noten anschließt. Mit folgenden Schritten kann man die erste und letzte Note eines Mehrklanges vertauschen:</p>
+<ol start="2" type="1">
+<li><p>Alle Noten der Stimme selektieren</p></li>
+<li><p>Im Menü <code>Bearbeiten / Noten</code> in Mehrklang tauschen` aufrufen.</p></li>
+</ol>
+<h3 id="parameter-in-der-zupfnoter-url"><span class="header-section-number">4.8.16</span> Parameter in der Zupfnoter-URL</h3>
 <p>In der Adressleiste des Browsers können Parameter übergeben wreden. Das ist für den Benutzer meist nicht erforderlich. Die Parameter werden hier zur Vollständigkeit aufgeführt.</p>
 <ul>
 <li><code>?mode={demo | work}</code></li>
