--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_release.html
@@ -2879,6 +2879,7 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
     }
       </code></pre>
 <h2 id="presets.notes.T01_T99"><span class="header-section-number">8.108</span> <code>presets.notes.T01_T99</code> - T01 .. T99 Alle ..</h2>
+<p>TODO: Helptext für presets.notes.T01_T99 einfügen</p>
 <pre><code>    &quot;T01_T99&quot;: {&quot;value&quot;: {}}
       </code></pre>
 <h2 id="presets.notes.T01_number"><span class="header-section-number">8.109</span> <code>presets.notes.T01_number</code> - T01 Nummer</h2>
@@ -2899,7 +2900,7 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
     }
       </code></pre>
 <h2 id="presets.notes.T01_number_extract"><span class="header-section-number">8.110</span> <code>presets.notes.T01_number_extract</code> - T01 Auszug-Nummer</h2>
-<p>Dies fügt eine Kennzeichung des Auszuges am Ender der Nummer ein.</p>
+<p>Dies fügt eine Kennzeichung des Auszuges am Ende der Nummer ein.</p>
 <p>Ein sinnvolles schema ist:</p>
 <ul>
 <li><code>-A</code> - Sopran Alt - per default Auszug 1</li>
@@ -3089,7 +3090,7 @@ Diese dient dazu ein “V” an die Harfennote zu drucken um anzudeuten, dass di
 <pre><code>    &quot;notes&quot;: {&quot;T01_number_extract&quot;: {&quot;text&quot;: &quot;{{extract_filename}}&quot;}}
       </code></pre>
 <h2 id="templates.extracts.notes.T01_number_extract"><span class="header-section-number">8.132</span> <code>templates.extracts.notes.T01_number_extract</code> - T01 Auszug-Nummer</h2>
-<p>Dies fügt eine Kennzeichung des Auszuges am Ender der Nummer ein.</p>
+<p>Dies fügt eine Kennzeichung des Auszuges am Ende der Nummer ein.</p>
 <p>Ein sinnvolles schema ist:</p>
 <ul>
 <li><code>-A</code> - Sopran Alt - per default Auszug 1</li>
